[package]
name = "analemma"
version = "0.1.0"
authors = ["Trent Nelson <trent.a.b.nelson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.26.0"
ed25519-dalek-bip32 = "0.1.1"
solana-account-decoder = "1.6.6"
solana-client = "1.6.6"
solana-logger = "1.6.6"
solana-sdk = "1.6.6"
spl-associated-token-account = "1.0.2"
spl-token = "3.1.0"
tiny-bip39 = "0.8.0"
